[project]
name = "drawthings-grpc"
version = "0.0.17"
description = "Connect to any Draw Things gRPCServerCLI and let ComfyUI generate and provide DT with images for ControlNet without needing to set them in DT itself."
authors = [
  {name = "Jokimbe"},
  {name = "kcjerrell"},
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
classifiers = []
dependencies = [
    "numpy",
    "pillow",
    "torch",
    "torchvision",
    "grpcio",
    "flatbuffers",
    "protobuf",
]

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage",  # testing
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "pytest",  # testing
    "ruff",  # linting,
]

[project.urls]
Repository = "https://github.com/Jokimbe/ComfyUI-DrawThings-gRPC"
#  Used by Comfy Registry https://registry.comfy.org
bugs = "https://github.com/Jokimbe/ComfyUI-DrawThings-gRPC/issues"

[tool.comfy]
PublisherId = "jokimbe"
DisplayName = "ComfyUI-DrawThings-gRPC"
Icon = ""
includes = []


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
